<resources>
    <string name="app_name">PositionMe</string>

    <!-- Buttons -->
    <string name="done">Done</string>
    <string name="stop">Complete</string>
    <string name="start">Start</string>
    <string name="measurements">Live data</string>
    <string name="files">History</string>
    <string name="info_description">See sensor hardware information</string>
    <string name="refresh_read">Refresh readings</string>
    <string name="download">Download</string>
    <string name="grant">Grant permissions</string>
    <string name="exit">Exit application</string>
    <string name="ok">OK</string>
    <string name="show_storage">Show locally</string>
    <string name="setLocation">Set</string>
    <string name="cancel">Cancel</string>

    <!-- Sensors -->
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="magnetic">Magnetic field</string>
    <string name="gyro">Gyroscope</string>
    <string name="light">Light sensor</string>
    <string name="pressure">Pressure sensor</string>
    <string name="proximity">Proximity sensor</string>
    <string name="gnssLatLong">GNSS (Lat/Long)</string>
    <string name="gnss">GNSS</string>
    <string name="pdr_pos">PDR Position</string>
    <string name="pdr">Pedestrian Dead Reckoning</string>
    <string name="wifi">WiFi Networks</string>


    <!-- Misc -->
    <string name="x">X: %1s</string>
    <string name="y">Y: %1s</string>
    <string name="z">Z: %1s</string>
    <string name="level">Level: %1s</string>
    <string name="lati">Lat: %1s</string>
    <string name="longi">Long: %1s</string>
    <string name="position">PDR Position</string>
    <string name="id">ID</string>
    <string name="datetime">Date&amp;Time</string>
    <string name="elevation">Elevation: %1s</string>
    <string name="averageStepLgn">Computed Avg. Step Length</string>
    <string name="correctStepLgn">unit: cm</string>
    <string name="locationInstructions">Long press and drag the marker to your start location</string>
    <string name="correctionInstructions">Zoom, scroll and rotate the map \n to correct the path</string>

    <!-- Sensor Info -->
    <string name="vendor">Vendor:\t\t\t\t\t\t\t %1$s</string>
    <string name="resolution">Resolution:\t\t %1$s</string>
    <string name="power">Power:\t\t\t\t\t\t\t\t %1$s</string>
    <string name="version">Version:\t\t\t\t\t\t %1$s</string>
    <string name="mac">MAC: %1$s</string>

    <!-- Preference Titles -->
    <string name="settings_title">Settings</string>
    <string name="sensor_header">Sensors</string>
    <string name="sync_header">Sync</string>
    <string name="user_header">User information</string>
    <string name="constants_header">Constants</string>

    <!-- Content Descriptions -->
    <string name="recording">Recording in progress</string>
    <string name="distance_travelled">Distance travelled:</string>
    <string name="uploadTitle">Manual upload</string>
    <string name="emptyUploadTitle">No trajectories to upload</string>

    <!-- Units only -->
    <string name="meter">%1$s m</string>
    <string name="db">%1$s dB</string>

    <!-- Sync Preferences -->
    <string name="time_title">Sync frequency</string>
    <string name="split_trajectory_title">Automatically split records</string>
    <string name="split_trajectory_summary_off">Trajectories are saved start to finish</string>
    <string name="split_trajectory_summary_on">Trajectories are split based on slider</string>
    <string name="split_trajectory_slider_title">Max number of minutes per recording</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- User data Preferences -->
    <string name="manual_steps_title">Use manual stride length</string>
    <string name="manual_steps_summary_off">The app will estimate stride length from the accelerometer readings</string>
    <string name="manual_steps_summary_on">The app will use the values provided below</string>
    <string name="height_title">User height (cm)</string>
    <string name="step_title">Step length (cm)</string>
    <!-- Constants Preferences -->
    <string name="constants_enable_title">Edit the constants used</string>
    <string name="constants_summary_off">The app will use the default constants</string>
    <string name="constants_summary_on">The app will use the values provided below</string>
    <string name="weiberg_K_title">Weiberg K</string>
    <string name="weiberg_K">K used in the Weiberg stride length estimation</string>
    <string name="elevation_seconds_title">Elevation seconds</string>
    <string name="elevation_seconds">Number of samples in the elevation buffer</string>
    <string name="accel_samples">Number of samples in the vertical/horizontal movement buffer</string>
    <string name="accel_samples_title">Accelerometer Samples</string>
    <string name="movement_epsilon_title">\u03B5</string>
    <string name="movement_epsilon">Minimum accelerometer magnitude for movement</string>
    <string name="filter_coefficient">Coefficient for fusing gyro-based and magnetometer-based orientation. [0,1]</string>
    <string name="filter_coefficient_title">Orientation filter coefficient</string>
    <string name="wifi_scan_interval">Scan interval for wifi networks. A scan takes approximately two seconds.</string>
    <string name="wifi_scan_title">WiFi interval</string>
    <!-- Mobile data Preferences -->
    <string name="mobile_data_title">Sync using mobile data</string>
    <string name="mobile_data_summary_off">The app will only send data through a WiFi connection</string>
    <string name="mobile_data_summary_on">The app will send data over mobile or WiFi connections</string>
    <!-- Building defaults -->
    <string name="building_def_title">Default building assumptions</string>
    <string name="floor_height">Floor height in meters</string>
    <string name="color">Color</string>
    <string name="gnssSwitch">🛰 Show GNSS </string>
    <string name="floor_down_button">Floor Down button</string>
    <string name="floor_up_button">Floor Up button</string>
    <string name="choose_map">Choose Map</string>
    <string name="auto_floor">❇️ Auto Floor </string>
    <string name="gnss_error">GNSS error:</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="delete_button">Delete</string>
    <string name="home_slogan">\"Coordinates Start with Your First Move\"</string>
    <string name="info">Sensor Info</string>
    <string name="fragment_home_slogan">\"Coordinates Start with Your First Move\"</string>
    <string name="start_recording">Record</string>
    <string name="floor_up">Floor up button</string>
    <string name="floor_down">Floor down button</string>
    <string name="red_dot_description_text">Recording In Progress</string>
    <string name="correct_your_step">Correct your own avg step length:</string>
    <string name="correct_step_hint">...</string>
    <string name="path_drawing_descritpion">Path drawing</string>
    <string name="position_me">Position Me</string>
    <string name="gnss_disabled">GNSS is disabled</string>
    <string name="replay_frag_restart">Restart</string>
    <string name="replay_frag_play">Play</string>
    <string name="replay_frag_end">End</string>
    <string name="replay_frag_exit">Exit</string>



    <!--
    ========================================
    RecordingFragment 字符串资源
    请将以下内容添加到你的 res/values/strings.xml 文件中
    ========================================
    -->

    <!-- Venue Selection -->
    <string name="venue_outdoor_hint">📍 Outdoor (Tap building to select venue)</string>
    <string name="change_venue">Change</string>
    <string name="back_to_recording">← Back</string>

    <!-- Recording Status -->
    <string name="recording_status">RECORDING</string>
    <string name="recording_indicator_desc">Recording indicator</string>

    <!-- Measurements -->
    <string name="distance_default">Distance: 0.00m</string>
    <string name="elevation_default">Elevation: 0.0m</string>
    <string name="gnss_error_default">GNSS Error: 0.00m</string>

    <!-- Buttons -->
    <string name="cancel_recording">Cancel</string>
    <string name="complete_recording">Complete</string>

    <!-- Existing strings that should already be in your strings.xml -->
    <!-- If these are missing, add them too: -->
    <!--
    <string name="elevation">Elevation: %s m</string>
    <string name="meter">Distance: %s m</string>
    <string name="gnss_error">GNSS Error: </string>
    -->





</resources>